# rPPG

./: .env.example  .gitignore  BRIEF_PROJET_RPPG.md  Dockerfile  Makefile  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
backend/: config.py  main.py
backend/core/: bpm_estimator.py  face_roi.py  session.py  signal_processor.py
backend/routers/: ws_router.py
backend/utils/: frame_decoder.py
docs/: comprendre-le-projet.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: chart.js  face_mesh_overlay.js  face_processor.js  heartbeat_audio.js  webcam.js  websocket_client.js
tests/: bench_ubfc.py  test_bpm_estimator.py  test_face_roi.py  test_signal_processor.py
